assets/css/style.css
/* ... */
.memory-card:active {
    -webkit-transform: scale(0.97);
            transform: scale(0.97);
    -webkit-transition: .2s;
    -o-transition: .2s;
    transition: .2s;
}

.memory-card.flip {
    -webkit-transform: rotateY(180deg);
            transform: rotateY(180deg);
    -webkit-transition: .8s;     
    -o-transition: .8s;
    transition: .8s;
}

.front-face,
.back-face {
    padding: 10px;
    position: absolute;
    -webkit-backface-visibility: hidden;
            backface-visibility: hidden;
    height: 100%;
    width: 100%;
    pointer-events: none;
}

.front-face {
    -webkit-transform: rotateY(180deg);
            transform: rotateY(180deg);
}

.easyavenger1,
.easy2avenger1,
.mediumavenger1,
.medium2avenger1,
.hardavenger1,
.hard2avenger1 {
    background: url('../images/antman.svg') no-repeat center;
}

.easyavenger2,
.easy2avenger2,
.mediumavenger2,
.medium2avenger2,
.hardavenger2,
.hard2avenger2 {
    background: url('../images/captainamerica.svg') no-repeat center;
}

.easyavenger3,
.easy2avenger3,
.mediumavenger3,
.medium2avenger3,
.hardavenger3,
.hard2avenger3 {
    background: url('../images/daredevil.svg') no-repeat center;
}

.easyavenger4,
.easy2avenger4,
.mediumavenger4,
.medium2avenger4,
.hardavenger4,
.hard2avenger4 {
    background: url('../images/groot.svg') no-repeat center;
}

.easyavenger5,
.easy2avenger5,
.mediumavenger5,
.medium2avenger5,
.hardavenger5,
.hard2avenger5 {
    background: url('../images/hawkeye.svg') no-repeat center;
}

.easyavenger6,
.easy2avenger6,
.mediumavenger6,
.medium2avenger6,
.hardavenger6,
.hard2avenger6 {
    background: url('../images/ironman.svg') no-repeat center;
}

.easyavenger7,
.easy2avenger7,
.mediumavenger7,
.medium2avenger7,
.hardavenger7,
.hard2avenger7 {
    background: url('../images/spiderman.svg') no-repeat center;
}

.easyavenger8,
.easy2avenger8,
.mediumavenger8,
.medium2avenger8,
.hardavenger8,
.hard2avenger8 {
    background: url('../images/thanos.svg') no-repeat center;
}

.easyavenger9,
.easy2avenger9,
.mediumavenger9,
.medium2avenger9,
.hardavenger9,
.hard2avenger9 {
    background: url('../images/thor.svg') no-repeat center;
}

.easyavenger10,
.easy2avenger10,
.mediumavenger10,
.medium2avenger10,
.hardavenger10,
.hard2avenger10 {
    background: url('../images/wolverine.svg') no-repeat center;
}

.easyavenger11,
.easy2avenger11,
.mediumavenger11,
.medium2avenger11,
.hardavenger11,
.hard2avenger11 {
    background: url('../images/hulk.svg') no-repeat center;
}

.easyavenger12,
.easy2avenger12,
.mediumavenger12,
.medium2avenger12,
.hardavenger12,
.hard2avenger12 {
    background: url('../images/deadpool.png') no-repeat center;
    background-size: 100%;
}

.back-face {
    background: url('../images/Avengers.svg') no-repeat center;
    background-size: 75%;
}

/* Playing Card Styling */

/* Modal Styling */
.modal-content {
    background-image: -o-radial-gradient(circle, lightcyan, darkcyan);
    background-image: radial-gradient(circle, lightcyan, darkcyan);
    font-weight: 600;
    border: solid 2px black;
    -webkit-box-shadow: 0 6px 6px -6px #000;
            box-shadow: 0 6px 6px -6px #000;
    border-radius: 0;
    -webkit-transform: skew(-5deg);
        -ms-transform: skew(-5deg);
            transform: skew(-5deg);
}

.modal-title {
    font-size: 170%;
    -webkit-transform: skew(5deg);
        -ms-transform: skew(5deg);
            transform: skew(5deg);
}

.modal-header,
.modal-footer {
    border: 0;
}

.modal-header {
    -webkit-transform: skew(5deg);
        -ms-transform: skew(5deg);
            transform: skew(5deg);
}

.modal-body {
    -webkit-transform: skew(5deg);
        -ms-transform: skew(5deg);
            transform: skew(5deg);
}

.btn-easy {
    background-image: -o-radial-gradient(circle, lightgreen, darkgreen);
    background-image: radial-gradient(circle, lightgreen, darkgreen);
}

.btn-medium {
    background-image: -o-radial-gradient(circle, lightyellow, darkorange);
    background-image: radial-gradient(circle, lightyellow, darkorange);
}

.btn-hard {
    background-image: -o-radial-gradient(circle, lightcoral, darkred);
    background-image: radial-gradient(circle, lightcoral, darkred);
}

/* Audio Modal */
.btn-primary {
    border: 1px solid black;
    background-image: -o-radial-gradient(lightgreen, darkgreen);
    background-image: radial-gradient(lightgreen, darkgreen);
    font-weight: 600;
    color: black;
}

.btn {
    border: 1px solid black;
}

.toggle-handle {
    border: 1px solid black;
    background-color: #fff;
}

.toggle-off {
    color:  black;
    background-image: -o-radial-gradient(lightcoral, darkred);
    background-image: radial-gradient(lightcoral, darkred);
    border: 1px solid black;
    font-weight: 600;
}

.volume-div {
    margin-bottom: 5px;
    display: -webkit-flex;
    display: -ms-flex;
    display: flex;
    -webkit-align-items: center;
        -ms-align-items: center;
            align-items: center;
}

#volume-slider {
    margin-left: 5px;
}

#sound-label {
    margin-right: 5px;
}

/* Avengers Bio Page */

.text-box-lg {
    background-image: -o-radial-gradient(circle, yellow, orange);
    background-image: radial-gradient(circle, yellow, orange);
    border: solid 2px #000;
    font-weight: 700;
    padding: 6px 12px;
    min-height: 290px;
    margin-bottom: 10px;
    text-align: center;
    -webkit-box-shadow: 0 6px 6px -6px #000;
            box-shadow: 0 6px 6px -6px #000;
}

.img-box {
    border: solid 2px #000;
    padding: 6px 12px;
    height: 290px;
    margin-bottom: 10px;
    -webkit-box-shadow: 0 6px 6px -6px #000;
            box-shadow: 0 6px 6px -6px #000;
} 

.img-box-blue {
    background-image: -o-radial-gradient(circle, lightblue, darkblue);
    background-image: radial-gradient(circle, lightblue, darkblue);
}

.img-box-grey {
    background-image: -o-radial-gradient(circle, white, slategrey);
    background-image: radial-gradient(circle, white, slategrey);
}
/* ... */

